Project qa_practice_app {
  database_type: 'PostgreSQL'
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: `0001-01-01 00:00:00Z`]
  created_at timestamptz [not null, default: `now()`]
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked bool [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table trackers as T {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  name varchar [not null]
  description varchar [not null]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}

Table boards as B {
  id uuid [pk]
  tracker_id uuid [ref: > T.id, not null]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  Indexes {
    (tracker_id) [unique]
  }
}

Table columns {
  id uuid [pk]
  board_id uuid [ref: > boards.id, not null]
  name varchar(100) [not null]
  position int [not null]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  Indexes {
    (board_id, position)
  }
}

Table habits {
  id uuid [pk]
  column_id uuid [ref: > columns.id, not null]
  name varchar [not null]
  status boolean [not null]
  frequency int[] [not null]
  time_spent_minutes int [not null]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]

  Indexes {
    (column_id)
  }
}

Table habit_entry {
  id uuid [pk]
  habit_id uuid [ref: > habits.id, not null]
  date date [not null]
  completed boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  modified_at timestamptz [not null, default: `now()`]
}